fix css vertical-align warning

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4072,7 +4072,7 @@ body.landing {
 	right: 0;
 	text-align: right;
 	top: 0;
-	vertical-align: middle;
+	/* vertical-align: middle; */
 	width: 7em;
 }
 
